* src/html/classic/css/gsa-style.css: Fix displaying the icon menu. Remove gap between the icon and the hover menu.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@24832 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/classic/css/gsa-style.css
+++ b/src/html/classic/css/gsa-style.css
@@ -970,6 +970,7 @@ select[multiple] {
 
 .icon-menu {
   font-weight: bold;
+  position: relative;
 }
 
 .icon-menu:hover img {
@@ -977,11 +978,11 @@ select[multiple] {
 }
 
 .icon-menu ul {
-  position:absolute;
+  position: absolute;
   display: none;
   padding: 0;
-  margin-left: -18px;
-  margin-top: 18px;
+  left: 0px;
+  top: 6px;
   z-index: 5;
   list-style: none;
   font-size: 10px;
